# yep-coc

./: .gitignore  Cargo.toml  LICENSE  README.md  design.md
.config/: nextest.toml
.github/: SECURITY_GUIDELINES.md  WORKFLOW_SECURITY.md  actionlint.yaml
.github/agents/: rust-agent.md
.github/workflows/: actionlint.yml  auto-approve.yml  bench-mpmc.yml  bench-spsc.yml  bench.yml  ci.yml  rust.yml
benches/: mpmc-throughput.rs  spsc-throughput.rs  spsc_throughput.rs
examples/: comparison.rs  mpmc-comparison.rs  mpmc-send-recv.rs  multi-send-recv.rs  simple-send-recv.rs  spsc-comparison.rs  spsc-send-recv.rs
src/: blocking_queue.rs  error.rs  futex_queue.rs  lib.rs  mutex_queue.rs  queue.rs  queue_alloc_helpers.rs  queue_meta.rs  utils.rs
test_support/: Cargo.toml
test_support/src/: lib.rs  utils.rs
tests/: blocking_queue_tests.rs  futex_queue_tests.rs  multi_thread_tests.rs  mutex_queue_tests.rs  single_thread_tests.rs  tests.rs  utils.rs
