[package]
name = "yep-coc"
description = "Yet another circular buffer. This one happens to be a zero copy, MPMC, lock free queue."
version = "0.1.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/richkcho/yep-coc"
keywords = ["circular", "queue", "zero-copy", "mpmc", "lock-free"]
categories = ["concurrency", "data-structures"]
license = "GPL-2.0-or-later"

[workspace]
members = ["test_support"]

[dev-dependencies]
clap = { version = "4.4", features = ["derive"] }
test_support = {path = "test_support"}
