[package]
name = "yep-coc"
description = "Yet another circular buffer. This one happens to be a zero copy, MPMC, lock free queue."
version = "0.2.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/richkcho/yep-coc"
keywords = ["circular", "queue", "zero-copy", "mpmc", "lock-free"]
categories = ["concurrency", "data-structures"]
license = "LGPL-2.1-or-later"

[workspace]
members = ["test_support"]

[features]
default = []
futex = ["wait_on_address"]

[dev-dependencies]
clap = { version = "4.4", features = ["derive"] }
test_support = {path = "test_support"}
flume = "0.11"
criterion = { version = "0.7", features = ["html_reports"] }
core_affinity = "0.8"

[dependencies]
cfg-if = "1.0"
wait_on_address = { version = "0.1", optional = true }
yep-cache-line-size = "0.9"

[[bench]]
name = "spsc-throughput"
harness = false

[[bench]]
name = "mpmc-throughput"
harness = false
